--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,3 +4,22 @@
     padding: 0px;
     margin: 0px;
 }
+html, body{
+    font-family: Arial, Helvetica, sans-serif;
+    width: 800px;
+}
+header{
+    text-align: justify;
+    padding: 10px;
+}
+header, h1{
+    text-align: center;
+    padding: 20px;
+}
+header >h2{
+    padding: 10px;
+}
+article{
+    padding: 30px;
+    font-size: 1.3em;
+}
