--- a/estilos/retrato.css
+++ b/estilos/retrato.css
@@ -1,8 +1,26 @@
 @charset "UTF-8";
 
+header{
+    background-color: rgba(188, 187, 187, 0.584);
+    border-radius: 20px;
+    box-shadow: 3px 2px 3px rgba(0, 0, 0, 0.252);
+}
+header >h1{
+    background-color: rgba(165, 164, 164, 0.642);
+    border-radius: 30px;
+    padding: 27px;
+    padding-bottom: 21px;
+}
 header >h2{
     text-align: justify;
     width: 300px;
+    padding: 20px;
+}
+header >p{
+    text-align: justify;
+    width: 300px;
+    padding: 9px;
+    font-size: 1.1em;
 }
 body{
     font-size: 0.9em;
@@ -27,4 +45,8 @@ form{
 form >fieldset{
     padding: 20px;
     font-size: 1.2em;
+    border-radius: 20px;
+}
+form > fieldset >p{
+    padding: 10px;
 }
